[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-cyclic-voltammetry"
version = "2.0.0"
description = "Analiza woltamogramu cyklicznego (CVision)"
readme = "README.md"
authors = [
  { name = "StarGate3", email = "you@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "PyQt6",
  "pyqtgraph",
  "numpy",
  "pandas",
  "scipy",
  "XlsxWriter"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["main*", "dialogs*", "derivative_windows*", "utils*"]
